fix: add spacing to file input wrapper for error message (#1530)
* fix: add spacing to file input wrapper for error message

* fix: update text styles for rfi card description

--- a/src/components/InformationRequests/InformationRequestForm/InformationRequestForm.module.scss
+++ b/src/components/InformationRequests/InformationRequestForm/InformationRequestForm.module.scss
@@ -15,7 +15,6 @@
 .questionDescription {
   display: flex;
   flex-direction: column;
-  gap: toRem(2);
   padding: 0 toRem(16);
 }
 
@@ -24,8 +23,7 @@
 }
 
 .fileInputWrapper {
-  margin-top: toRem(-16);
-  margin-bottom: toRem(-16);
+  padding: 0 toRem(16);
 }
 
 .divider {
